# semantica

./: .checkov.yaml  .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  MANIFEST.in  PLATFORM_REFERENCE.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.dev.yml  docker-compose.yml  docs_check.py  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  defender-for-devops.yml  docs.yml  release.yml  security-scan.yml  security.yml
benchmarks/: benchmarks_runner.py
deploy/azure/: README.md  azure.yaml  main.bicep  main.parameters.json
deploy/fly/: README.md  fly.toml
deploy/gcp/: README.md  cloudbuild.yaml  cloudrun-service.yaml
deploy/helm/: README.md
deploy/helm/knowledge-explorer/: Chart.yaml  README.md  values.prod.yaml  values.yaml
deploy/helm/knowledge-explorer/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  service.yaml
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  secret.yaml.example  service.yaml
deploy/railway/: README.md
deploy/render/: README.md  render.yaml
docs/: CodeExamples.md  MIGRATION_V2.md  architecture.md  arrow_exporter.md  changelog.md  choose-your-module.md  citation.md  cli-setup.md  community-projects.md  community.md  concepts.md  contributing-guide.md  contributing.md  cookbook.md  deep-dive.md  docs.json  examples.md  explorer-setup.md  faq.md  getting-started.md  glossary.md  governance.md  index.md  installation.md  learning-more.md  license.md  modules.md  project-license.md  quickstart.md  use-cases.md  vector_store_usage.md
docs/assets/: custom.css
docs/graph_stores/: apache_age.md
docs/guides/: agent-memory.md  change-management.md  conflict-resolution.md  context-graphs.md  decision-intelligence.md  deduplication.md  distance-intelligence.md  export.md  graph-analytics.md  graphrag.md  ingest.md  llm-integrations.md  mcp-server.md  multi-agent.md  ontology.md  pipeline.md  policy-engine.md  provenance.md  reasoning.md  semantic-extraction.md  shacl-validation.md  visualization.md
docs/integrations/: agno.md  databricks.md  docling.md  snowflake.md
docs/migration/: kg-provenance-tracker.md
docs/reference/: change_management.md  conflicts.md  context.md  core.md  deduplication.md  distance.md  embeddings.md  evals.md  explorer.md  export.md  graph_store.md  ingest.md  kg.md  llms.md  mcp_server.md  normalize.md  ontology.md  parse.md  pipeline.md  provenance.md  reasoning.md  seed.md  semantic_extract.md  split.md  temporal.md  triplet_store.md  utils.md  vector_store.md  visualization.md
docs/vector_stores/: pgvector.md
explorer/: README.md  package-lock.json  package.json  vite.config.ts
explorer/src/: App.tsx
explorer/src/workspaces/DecisionWorkspace/: DecisionWorkspace.tsx
explorer/src/workspaces/DiffMergeWorkspace/: DiffMergeWorkspace.tsx
explorer/src/workspaces/GraphWorkspace/: GraphInspectorPanel.tsx  GraphWorkspace.tsx  graphSceneState.ts  graphTheme.ts  types.ts  useLoadGraph.ts
explorer/src/workspaces/ImportExportWorkspace/: ImportExportWorkspace.tsx
explorer/src/workspaces/LineageWorkspace/: LineageDiagram.tsx
explorer/src/workspaces/OntologyWorkspace/: AlignmentsTab.tsx  HealthTab.tsx  OntologyManager.tsx  ShaclStudio.tsx
explorer/src/workspaces/SparqlWorkspace/: SparqlWorkspace.tsx
semantica/: __init__.py  cli.py
semantica/context/: context_graph.py
semantica/explorer/: __init__.py  app.py
semantica/explorer/routes/: ontology.py
semantica/export/: __init__.py  export_usage.md  methods.py  neo4j_csv_exporter.py  registry.py
semantica/ingest/: __init__.py  arrow_ingestor.py  databricks_ingestor.py  file_ingestor.py  methods.py  public_api_ingestor.py  registry.py
semantica/kg/: provenance_tracker.py
semantica/pipeline/: pipeline_validator.py
semantica/provenance/: manager.py
semantica/reasoning/: reasoner.py
semantica/triplet_store/: blazegraph_store.py  construct_templates.py  jena_store.py  query_engine.py  rdf4j_store.py  sparql_escaping.py
semantica/utils/: constants.py  progress_tracker.py
semantica/vector_store/: __init__.py  config.py  sqlite_vec_store.py  vector_store.py  vector_store_usage.md
tests/: test_cli_commands.py  test_cli_foundation.py  test_databricks_ingestor.py  test_progress_tracker_regressions.py
tests/explorer/: test_explorer_api.py
tests/export/: test_neo4j_csv_exporter.py
tests/ingest/: test_arrow_ingestor.py  test_public_api_ingestor.py
tests/pipeline/: test_pipeline_validator_construct.py
tests/provenance/: test_all_modules.py  test_backward_compat.py  test_integration.py  test_llms_real_tracking.py  test_manager.py
tests/reasoning/: test_reasoner.py
tests/triplet_store/: test_blazegraph_store.py  test_construct_templates.py  test_jena_store.py  test_query_engine.py  test_rdf4j_store.py
tests/vector_store/: test_sqlite_vec_store.py
